
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ bpf_update_elem (int ,int*,unsigned long*,int ) ;
 int errno ;
 int fail (char*,int ) ;
 int mapfd ;
 int strerror (int ) ;

__attribute__((used)) static void
update_elem(int key, unsigned long value) {
 if (bpf_update_elem(mapfd, &key, &value, 0)) {
  fail("bpf_update_elem failed '%s'\n", strerror(errno));
 }
}
